# fnn_mlir

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.md  dummy.mlir  pre-commit  run.sh  setup.sh
fnn_mlir/: CMakeLists.txt  main.cpp
include/Factorio/: CMakeLists.txt  FactorioDialect.h  FactorioDialect.td  FactorioOps.h  FactorioOps.td
lib/: CMakeLists.txt
lib/Factorio/: CMakeLists.txt  FactorioDialect.cpp  FactorioOps.cpp
mlir_sample/: linalg.mlir
mlir_samples/: linalg_llvm.mlir  output.ll
notes/: links.txt  notes.md  simple.mlir
torch_mlir_converter/: env.sh  main.py  setup.sh
